================================================================================
CHANGELOG
================================================================================

	0.4.1.5
	Jun 28, 2009

	* extra/tablature.py: Fixed bug in from_Suite, added add_headers (closes
	issue #62), mark beats in from_Bar (closes issue #60)

================================================================================

	0.4.1.4
	Jun 28, 2009

	* extra/tablature.py: Added from_Track (closes issue #5), added 
	get_qsize (closes issue #58), from_Composition (closes issue #56) 
	and from_Suite (closes issue #57)
	* containers/Suite.py: Overloaded the + operator
	
================================================================================

	0.4.1.3
	Jun 28, 2009

	* extra/tablature.py: Added tablature module that can convert 
	some of the mingus.containers to pretty ascii tablature. (issue #5)
	* extra/tunings.py: Sort and return fingerings on fitness. (Closes 
	issue #53)

================================================================================

	0.4.1.2
	Jun 28, 2009

	* extra/tunings.py: Added find_fingering method to StringTuning class.
	Function returns a list of possible fingerings for NoteContainers.
	(Closes issue #48)
	* containers/Note.py: Enhanced constructor. Can now be called with 
	already existing Note object (hardcopy) or an integer (conversion). 
	* containers/Note.py: Added from_shorthand and to_shorthand which 
	converts from and to traditional Helmhotz pitch notation. (Closes 
	issue #49)


================================================================================

	0.4.1.1
	Jun 28, 2009

	* containers/Note.py: Added `measure` helper function to find out the 
	difference in semitones between two Notes.
	* extra/tunings.py: New module that contains dozens of string tunings, 
	a StringTuning class and some functions to search through them.

================================================================================

	0.4.1
	Jun 26, 2009
